--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,13 @@
 [submodule ".registry"]
 	path = .registry
-	url = https://github.com/r-universe-org/cran-to-git
+	url = https://github.com/deandevl/deandevl.r-universe.dev
 	branch = HEAD
+[submodule "RcensusPkg"]
+	path = RcensusPkg
+	url = https://github.com/deandevl/RcensusPkg
+[submodule "RplotterPkg"]
+	path = RplotterPkg
+	url = https://github.com/deandevl/RplotterPkg
+[submodule "RregressPkg"]
+	path = RregressPkg
+	url = https://github.com/deandevl/RregressPkg
